input search terminé

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <title>Le Poney Fringant</title>
 </head>
 
@@ -26,7 +27,11 @@
             <li>
                 <a href="#">Connexion</a>
             </li>
-        </ul>
+            <li>
+                <input type="text" placeholder="" name="search" .line>
+                <button class="fa fa-search" aria-hidden="true"></button>
+            </li>
+            </ul>
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
