--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="variables.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <title>Le Poney Fringant</title>
@@ -39,6 +40,13 @@
         </div>
     </nav>
     <script src="app.js"></script>
+    <div class="content">
+        <button class="sign">S'inscrire !</button>
+        <h1>Le Poney Fringant !</h1>
+        <p>Lorem ipsum dolor sit amet consectetur!</p>
+    </div>
+            <img class="poney-icon"src="/assets/lePoney.svg" alt="icon-poney">
+    
 </body>
 
 </html>
