page connexion finish

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
                 <a href="#">Role Membre</a>
             </li>
             <li>
-                <a href="#">Connexion</a>
+                <a href="connexion.html">Connexion</a>
             </li>
             <li>
                 <input type="text" placeholder="" name="search" .line>
