--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -13,10 +13,12 @@
 	<form action="" class="form">
 		<img src="/assets/undraw_profile_pic_ic5t.svg" alt="avatar">
 		<h1>Connexion</h1>
-		<input type="email" name="email" class="box" placeholder="Numéro Adhérent">
+		<input type="text" name="pseudo" class="box" placeholder="Numéro Adhérent">
+		<input type="email" name="email" class="box" placeholder="Adresse Mail">
 		<input type="password" name="password" class="box" placeholder="Mot de passe">
-		<input type="submit" value="connexion" id="submit">
+		<input type="button" class="submit" value="Connexion">
 		<a href="#">Mot de passe oublié?</a>
+		<input type="button" class="submit" value="Créer un compte">
 	</form>
 	<script src="/frontend/app.js"></script>
 </body>
