--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="variables.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Le Poney Fringant</title>
 </head>
 
@@ -97,7 +97,16 @@
           </div>
         </div>
       </div>
-
+      <footer class="footer">
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Role Membre</a></li>
+            <li><a href="#">Statistique</a></li>
+            <li><a href="#">connexion</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <p> © Copyright Poney Fringant 2021.</p>
+    </footer>
 </body>
 
 </html>
