base de donnée terminé

--- a/frontend/inscription.html
+++ b/frontend/inscription.html
@@ -39,7 +39,7 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <form action="inscription.html" class="form" method="POST">
+    <form action="" class="form" method="POST">
 		<img src="/assets/lePoney.svg" alt="avatar">
         <h1>Inscription</h1>
         <input type="text" name="name" class="boxe" placeholder="Prénom">
