je commence le backend

--- a/frontend/inscription.html
+++ b/frontend/inscription.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="variables.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="inscription.css">
+    <link rel="stylesheet" href="/frontend/css/style.css">
+	<link rel="stylesheet" href="/frontend/css/inscription.css">
+	<link rel="stylesheet" href="/frontend/css/variables.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>Inscription</title>
@@ -60,10 +60,20 @@
                     <input type="text" name="address" class="boxe" placeholder="Adresse">
                     <input type="text" name="address" class="boxe" placeholder="Ville">
                     <input type="tel" name="phone" class="boxe" placeholder="Numéro de téléphone">
-                    <button name="button" class="submit1">Créer un compte</button>
+                    <button name="button" class="submit1">Suivant</button>
                 </div>
             </div>
         </form>
+        <footer class="footer">
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Role Membre</a></li>
+                <li><a href="#">Statistique</a></li>
+                <li><a href="#">connexion</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <p> © Copyright Poney Fringant 2021.</p>
+        </footer>
         <script src="app.js"></script>
 </body>
 
