--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="connexion.css">
-	<link rel="stylesheet" href="variables.css">
+	<link rel="stylesheet" href="/frontend/css/style.css">
+	<link rel="stylesheet" href="/frontend/css/connexion.css">
+	<link rel="stylesheet" href="/frontend/css/variables.css">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 	<title>Connexion</title>
@@ -41,17 +41,27 @@
             <div class="line3"></div>
         </div>
     </nav>
-	<form action="inscription.html" class="form" method="POST">
+	<form action="connexion.php" class="form" method="POST">
 		<img src="/assets/lePoney.svg" alt="avatar">
 		<h1>Connexion</h1>
-		<input type="text" name="pseudo" class="box" placeholder="Numéro Adhérent">
+		<input type="text" name="pseudo" class="box" placeholder="Pseudo">
 		<input type="email" name="email" class="box" placeholder="Adresse Mail">
-		<input type="password" name="password" class="box" placeholder="Mot de passe">
+		<input type="password" name="password" id="password" class="box" placeholder="Mot de passe">
 		<button name="button" class="submit">Connexion</button>
 		<a href="#">Mot de passe oublié?</a>
 		<button name="button" class="submit">Créer un compte</button>
 	</form>
-	<script src="app.js"></script>
+    <script src="app.js"></script>
+    <footer class="footer">
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Role Membre</a></li>
+            <li><a href="#">Statistique</a></li>
+            <li><a href="#">connexion</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <p> © Copyright Poney Fringant 2021.</p>
+    </footer>
 </body>
 
 </html>
