connexion php fini

--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -41,7 +41,7 @@
             <div class="line3"></div>
         </div>
     </nav>
-	<form action="connexion.php" class="form" method="POST">
+	<form action="/backend/connexion.php" class="form" method="POST">
 		<img src="/assets/lePoney.svg" alt="avatar">
 		<h1>Connexion</h1>
 		<input type="text" name="pseudo" class="box" placeholder="Pseudo">
