--- a/frontend/inscription.html
+++ b/frontend/inscription.html
@@ -42,7 +42,7 @@
             <div class="line3"></div>
         </div>
     </nav>
-        <form action="" class="form" method="POST">
+        <form action="/backend/inscription.php" class="form" method="POST">
             <img src="/assets/lePoney.svg" alt="avatar">
             <h1>Inscription</h1>
             <div class="contact-form">
@@ -55,7 +55,7 @@
                     <input type="password" name="password" class="boxe" placeholder="Mot de passe">
                 </div>
                 <div class="input2">
-                    <input type="password" name="password" class="boxe" placeholder="Confirmez le Mot de passe">
+                    <input type="password" name="password-confirmation" class="boxe" placeholder="Confirmez le Mot de passe">
                     <input type="text" name="cp" class="boxe" placeholder="Code Postal">
                     <input type="text" name="address" class="boxe" placeholder="Adresse">
                     <input type="text" name="address" class="boxe" placeholder="Ville">
