app.js/connexion.php terminé

--- a/frontend/connexion.html
+++ b/frontend/connexion.html
@@ -47,11 +47,10 @@
 		<input type="text" name="pseudo" class="box" placeholder="Pseudo">
 		<input type="email" name="email" class="box" placeholder="Adresse Mail">
 		<input type="password" name="password" id="password" class="box" placeholder="Mot de passe">
-		<button name="button" class="submit">Connexion</button>
+		<button type="submit" id="btn_login">Connexion</button>
 		<a href="#">Mot de passe oublié?</a>
-		<button name="button" class="submit">Créer un compte</button>
 	</form>
-    <script src="app.js"></script>
+    <script src="/frontend/app.js" defer></script>
     <footer class="footer">
         <ul>
             <li><a href="#">Accueil</a></li>
