--- a/frontend/interet.html
+++ b/frontend/interet.html
@@ -11,6 +11,35 @@
 </head>
 
 <body>
+    <nav>
+        <div class="Logo">
+            <h4>Le Poney Fringant</h4>
+        </div>
+        <ul class="nav-links">
+            <li>
+                <a href="index.html">Accueil</a>
+            </li>
+            <li>
+                <a href="#block">Role Membre</a>
+            </li>
+            <li>
+                <a href="#statistique.html">Statistique</a>
+            </li>
+            <li>
+                <a href="connexion.html">Connexion</a>
+            </li>
+            <li>
+                <input type="text" placeholder="" name="search" .line>
+                <button class="fa fa-search" aria-hidden="true"></button>
+            </li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+    <script src="/frontend/app.js" defer></script>
     <form action="" class="form" method="POST">
         <img src="/assets/lePoney.svg" alt="avatar">
         <h1>Les Centres d'intérets</h1>
@@ -44,5 +73,15 @@
             </div>
         </div>
     </form>
+    <footer class="footer">
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="/frontend/index.html/#block">Role Membre</a></li>
+            <li><a href="statistique.html">Statistique</a></li>
+            <li><a href="connexion.html">connexion</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <p> © Copyright Poney Fringant 2021.</p>
+    </footer>
 </body>
 </html>
