--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
                 <a href="#block">Role Membre</a>
             </li>
             <li>
-                <a href="#">Statistique</a>
+                <a href="statistique.html">Statistique</a>
             </li>
             <li>
                 <a href="connexion.html">Connexion</a>
@@ -35,7 +35,7 @@
             </li>
         </ul>
         <div class="burger">
-            <div class="line1"></div>
+            <div class="line1"></div> <!--les lignes du burger-->
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
@@ -47,7 +47,6 @@
         <p>Lorem ipsum dolor sit amet consectetur!</p>
     </div>
     <img class="poney-icon" src="/assets/lePoney.svg" alt="icon-poney">
-
     <div id="block">
         <h1 class="head"><span>Role</span>Membre</h1>
 
@@ -100,16 +99,12 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-    <div style="width: 75%">
-        <canvas id="myChart"></canvas>
-    </div>
     <footer class="footer">
         <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Role Membre</a></li>
-            <li><a href="#">Statistique</a></li>
-            <li><a href="#">connexion</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="#block">Role Membre</a></li>
+            <li><a href="statistique.html">Statistique</a></li>
+            <li><a href="connexion.html">connexion</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <p> © Copyright Poney Fringant 2021.</p>
