--- a/frontend/profil.html
+++ b/frontend/profil.html
@@ -19,10 +19,10 @@
                 <a href="index.html">Accueil</a>
             </li>
             <li>
-                <a href="#"> Statistique</a>
+                <a href="statistique.html"> Statistique</a>
             </li>
             <li>
-                <a href="#">Role Membre</a>
+                <a href="/frontend/index.html/#block">Role Membre</a>
             </li>
             <li>
                 <a href="connexion.html">Connexion</a>
@@ -52,6 +52,7 @@
       </div>
       <div class="card-content">
         <button name="button" class="submit1">Changer la photo de profile</button>
+        <!--<button name="button" class="submit1"><a href="/backend/deconnexion.php"></button> !-->
         <h3>Eve Jourdan</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
       </div>
@@ -66,10 +67,10 @@
     <!--mettre les centres d'intéret-->
     <footer class="footer">
         <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Role Membre</a></li>
-            <li><a href="#">Statistique</a></li>
-            <li><a href="#">connexion</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="/frontend/index.html/#block">Role Membre</a></li>
+            <li><a href="statistique.html">Statistique</a></li>
+            <li><a href="connexion.html">connexion</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <p> © Copyright Poney Fringant 2021.</p>
